@@ -24,7 +24,17 @@
                     <compilerArgs>
                         <arg>-proc:none</arg>
                         <arg>-Xlint:all</arg>
+                        <arg>--add-exports=java.base/sun.security.x509=ALL-UNNAMED</arg>
                     </compilerArgs>
+                </configuration>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.2.5</version>
+                <configuration>
+                    <argLine>--add-exports java.base/sun.security.x509=ALL-UNNAMED</argLine>
                 </configuration>
             </plugin>
 
@@ -38,6 +48,9 @@
                         <manifest>
                             <mainClass>net.perseity.Demo</mainClass>
                         </manifest>
+                        <manifestEntries>
+                            <Add-Exports>java.base/sun.security.x509</Add-Exports>
+                        </manifestEntries>
                     </archive>
                     <descriptors>
                         <descriptor>src/main/assembly/assembly.xml</descriptor>
